--- a/src/pages/Home/Product/Product.module.css
+++ b/src/pages/Home/Product/Product.module.css
@@ -14,6 +14,7 @@ img {
   grid-template-columns: 0.9fr 1fr;
   padding: 2.5em 0 2.5em;
   width: 500px;
+  height:507px;
   background-color: white;
   border-radius: 5px;
   box-shadow: 0px 2px 20px rgb(0 0 0 / 20%);
@@ -48,7 +49,6 @@ img {
   width: 235px;
   height: 235px;
   object-fit: cover;
-  filter: saturate(150%) contrast(120%) hue-rotate(10deg) drop-shadow(1px 20px 10px rgba(0, 0, 0, 0.3));
 }
 
 .photo_album {
