--- a/src/pages/Shared/Footer/Footer.css
+++ b/src/pages/Shared/Footer/Footer.css
@@ -1,7 +1,9 @@
-footer p{
-    background-color: #2a2a2a;
-    color:white;
-    text-align: center;
-    padding: 15px 0px;
-    margin-bottom: 0;
+.form-control::placeholder {
+    font-size: 0.95rem;
+    color: #aaa;
+    font-style: italic;
+}
+
+.form-control.shadow-0:focus {
+    box-shadow: none;
 }
