--- a/src/pages/Home/Inventory/Inventory.css
+++ b/src/pages/Home/Inventory/Inventory.css
@@ -11,43 +11,76 @@
   gap: 75px;
 }
 
-.pagination button{
-   margin-right:15px;
-   border:1px solid #2196f3;
-   width:32px;
-   height:38px;
-   background-color: white;
-   font-weight: 500;
-   color:#2196f3;
-   outline: none;
+.pagination button {
+  margin-right: 15px;
+  border: 1px solid #2196f3;
+  width: 32px;
+  height: 38px;
+  background-color: white;
+  font-weight: 500;
+  color: #2196f3;
+  outline: none;
 }
 
-.pagination .selected{
+.pagination .selected {
   background-color: #2196f3;
-  color:white;
+  color: white;
   border-color: #2196f3;
 }
 
-#prevNextBtn{
+#prevNextBtn {
   background-color: white;
   width: 55px;
-  height:40px;
+  height: 40px;
   color: #2196f3;
   border: none;
-  border:1px solid #2196f3;
+  border: 1px solid #2196f3;
   font-weight: 500;
   border-radius: 2px;
 }
 
-#prevNextBtn:hover{
+#prevNextBtn:hover {
   background-color: #2196f3;
   color: white;
 }
 
-.invetoryBtn{
-  border:none;
-  color:white;
+.invetoryBtn {
+  border: none;
+  color: white;
   background-color: #87c140;
   border-radius: 3px;
   font-weight: 500;
+}
+
+.prevBtn{
+  margin-right:48px;
+}
+
+.nextBtn{
+  margin-left:24px;
+}
+
+@media (max-width: 576px) {
+  .inventory-container {
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: 0px;
+  }
+
+  .prevBtn{
+    margin-right:20px;
+  }
+
+  .nextBtn{
+    margin-left:14px;
+  }
+
+  .pagination button {
+    margin-right: 8px;
+  }
+
+  .container{
+    width:85%;
+    padding-right:0px;
+  }
+
 }
