--- a/src/pages/Home/Product/Product.module.css
+++ b/src/pages/Home/Product/Product.module.css
@@ -14,7 +14,7 @@ img {
   grid-template-columns: 0.9fr 1fr;
   padding: 2.5em 0 2.5em;
   width: 500px;
-  height:507px;
+  height: 507px;
   background-color: white;
   border-radius: 5px;
   box-shadow: 0px 2px 20px rgb(0 0 0 / 20%);
@@ -49,29 +49,6 @@ img {
   width: 235px;
   height: 235px;
   object-fit: cover;
-}
-
-.photo_album {
-  padding: 0.7em 1em;
-  border-radius: 0 0 6px 6px;
-  background-color: #fff;
-}
-
-.photo_album ul {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 0px;
-  padding-left: 0px
-}
-
-.photo_album li {
-  float: left;
-  width: 40px;
-  height: 40px;
-  padding: 7px;
-  list-style: none;
-  border: 1px solid #a6a6a6;
-  border-radius: 3px;
 }
 
 /* ----- Informations Section ----- */
@@ -159,4 +136,46 @@ img {
 .virus {
   color: #ff3f40;
   margin-right: 5px;
+}
+
+.product_description {
+  margin-right: 8px
+}
+
+.product_wrapper {
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+}
+
+@media (max-width: 576px) {
+  .photo_main img {
+    width: 130px;
+    height: 130px;
+  }
+
+  .photo_container {
+    width: 140px;
+    top: 65px;
+    height: 300px;
+  }
+
+  .product {
+    grid-template-columns: 0.5fr 1fr;
+    width: 360px;
+    height: 507px;
+  }
+
+  .buy__btn {
+    padding: 1.3em 2.5em;
+  }
+
+  .product_info {
+    width: 235px;
+  }
+
+  .product_wrapper {
+    padding-right: 0px ;
+    padding-left: 0px ;
+  }
+
 }
