--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.titleTopPadding{
+   padding-top: 90px;
+   padding-bottom: 80px;
+   margin-bottom: 0px;
+}
