--- a/src/pages/Home/Banner/Banner.css
+++ b/src/pages/Home/Banner/Banner.css
@@ -1,4 +1,54 @@
-.banner img{
-    height:558px;
+.banner img {
+    height: 110vh;
     object-fit: cover;
 }
+
+.carousel-caption {
+    bottom: 25%;
+}
+
+.sliderTitle {
+    font-size: 90px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.sliderDescription {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.sliderButton {
+    background: transparent;
+    border: 1px solid white;
+    padding: 10px 30px;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-top: 30px;
+}
+
+.sliderButton:hover {
+    background: rgb(135, 193, 64);
+    border: 1px solid rgb(135, 193, 64);
+}
+
+.carousel-control-next, .carousel-control-prev{
+    width:10%;
+}
+
+@media only screen and (min-width: 1400px) {
+    .carousel-caption {
+        bottom: 32%;
+    }
+  }
+
+@media only screen and (max-width: 576px) {
+    .sliderTitle {
+        font-size: 60px;
+    }
+    
+    .sliderDescription {
+        font-size: 16px;
+    }
+  }
