--- a/src/pages/Shared/Header/Header.css
+++ b/src/pages/Shared/Header/Header.css
@@ -1,8 +1,3 @@
-.header-container{
-    margin:0px 48px;
-    padding:0px 48px;
-}
-
 .button {
     border: none;
     border-radius: 2px;
@@ -33,20 +28,61 @@
     background-size: 100%;
 }
 
-.fs-15px-fw-500{
-    font-size:15px;
-    font-weight:500;
+.navLink {
+    font-size: 15px;
+    font-weight: 500;
+    color: white;
+    text-decoration: none;
+    padding: 16px;
+    margin: 0px 4px;
+}
+
+.navLink:hover {
+    color: #88c000;
+}
+
+.navbarScroll {
+    box-shadow: 0 0 10px 0 rgb(0 0 0 / 20%);
+    background-color: black;
+    transition: 1s;
+}
+
+.stickyTop {
+    position: sticky;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1020;
+    background-color: black;
+}
+
+.fixedTop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
+
+.active-link-color {
+    color: #88c000;
 }
 
 @media (max-width: 576px) {
-    .header-container{
-        margin:0px 20px;
-        padding:0px;
+
+    .container {
+        width: 93%;
     }
-    .toggle-btn{
-        background-color:white;
+
+    .navbarNotScroll {
+        background-color: black;
     }
-    .logOut-lonIn{
+
+    .toggle-btn {
+        background-color: white;
+    }
+
+    .logOut-lonIn {
         text-align: center;
     }
 }
