delete confirmation process is done

--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.swal2-confirm {
+  background-color: rgb(14, 171, 14) !important;
+  border: 0px;
+  outline: none;
   color: white;
+  text-transform: none;
 }
 
-.App-link {
-  color: #61dafb;
+.swal2-confirm:hover {
+  background-color: rgb(14, 171, 14) !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.swal2-cancel {
+  background-color: rgb(220, 18, 18) !important;
+  border: 0px;
+  outline: none;
+  color: white;
+  text-transform: none;
+  margin-right: 15px;
 }
 
-.titleTopPadding{
-   padding-top: 90px;
-   padding-bottom: 80px;
-   margin-bottom: 0px;
+.swal2-cancel:hover {
+  background-color: rgb(220, 18, 18) !important;
+}
+
+.titleTopPadding {
+  padding-top: 90px;
+  padding-bottom: 80px;
+  margin-bottom: 0px;
 }
